Version 2.9 (X X, 2017) - ""
------------------------------------------------------------------------------

*** CORE/CPU *** Thanks to DJRobX
Support for some Stargame games added

Joctronic emulation works now, yet still no good dumps for Punky Willy, and Pin-Ball is missing entirely...

Using GTS80 gen. 2 sound on Excalibur instead of gen. 3, enabling 8910 sounds (thanks to Jim Hernandez for noticing)

Fix some GTS3 DMD animations running too fast

Change some more of the timing for the idle/throttle speed code

Fix a problem when using altsound packages (like PinSound) and changing the machine volume (which resulted in doubled sounds: emulation and altsound)

Updated to zlib 1.2.11

*** ROM SUPPORT *** Thanks to Flipprojets.fr for all the GTS80b-sets (plus Free Play patches), ipdb.org, exegeta for all the LTD and Taito games and clones
New:
LTD: Arizona, Columbia, Cowboy Eight Ball, Disco Dancing, Force, Haunted Hotel, Hustler, Martian Queen, King Kong, Space Poker, Time Machine, Trick Shooter, Viking King
Stargame: Space Ship, White Force, Slalom Code 0.3
Taito: Volley (formerly known as Voley Ball and was missing most dumps)

Correct Dumps:
Taito: Lady Luck (sound dumps were the ones from Vegas)

Clones:
Amazon Hunt II (French Free Play)
Amazon Hunt III (French Free Play)
Amazon Hunt III (rev. 1 French)
Amazon Hunt III (rev. 1 French Free Play)
Arena (Free Play)
Arena (French)
Arena (French Free Play)
Arena (German)
Arena (German Free Play)
Arena (rev. 1 Free Play)
Bad Girls (Free Play)
Bad Girls (French)
Bad Girls (French Free Play) (enabled by setting the maximum number of credits to 20 (both DIP 15 and 16 ON))
Bad Girls (German)
Bad Girls (German Free Play) (enabled by setting the maximum number of credits to 20 (both DIP 15 and 16 ON))
Big House (Free Play)
Big House (French)
Big House (French Free Play)
Big House (German)
Big House (German Free Play)
Bone Busters Inc. (Free Play)
Bone Busters Inc. (French Free Play)
Bone Busters Inc. (German)